# Total_Downloader

./: .dockerignore  .gitignore  Dockerfile  README.md  railway.json  render.yaml
.github/workflows/: deploy-pages.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: .env.example  index.html  package-lock.json  vite.config.ts
frontend/public/: llm.txt  llms.txt  robots.txt  sitemap.xml
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx  types.ts  vite-env.d.ts
